現在地を示すマーカーを追加 マーカーの表示，非表示を切り替え機能追加

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,17 @@
 .button-element {
   margin: 7px;
 }
+
+li {
+  list-style: none;
+}
+
+li .item {
+  margin: 7px 0;
+}
+
+li .item img {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
