--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <button
         mat-icon-button
         aria-label="Example icon button with a menu icon"
-        (click)="drawer.toggle()">
+        (click)="sideMenu.toggleDrawer()">
         <mat-icon>menu</mat-icon>
       </button>
       <span>Set your favorite place!</span>
@@ -18,34 +18,9 @@
   </p>
   <div id="map">
     <mat-drawer-container class="example-container" autosize>
-      <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
-        <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-        <li *ngFor="let item of items">
-          <div class="item" style="display: flex; align-items: center;">
-            <img [src]=item.url>
-            {{ item.name }}
-            <div style="text-align: right;">
-              <mat-slide-toggle
-                style="width: 120px;"
-                [(ngModel)]="item.toggled"
-                (change)="onToggleChange(item.toggled)"></mat-slide-toggle>
-            </div>
-          </div>
-        </li>
-        <button
-          class="button-element"
-          color="warn"
-          mat-raised-button>
-          + Item
-        </button>
-        <button
-          class="button-element"
-          (click)="closeDrawerContainer()"
-          mat-raised-button>
-          Close
-        </button>
-      </mat-drawer>
+      <app-side-menu
+        [(items)]="items">
+      </app-side-menu>
       <google-map
         height="600px"
         width="100%"
