--- a/src/app/add-item-dialog/add-item-dialog.component.html
+++ b/src/app/add-item-dialog/add-item-dialog.component.html
@@ -1,17 +1,25 @@
-<h1 mat-dialog-title>What is your favorite place?</h1>
-
-<form>
-  <mat-form-field>
-    <mat-label>Favorite Place</mat-label>
-    <input matInput placeholder="Enter your favorite place" [formControl]="favoritePlace">
-  </mat-form-field>
-</form>
-
-<div mat-dialog-actions>
-  <button mat-button (click)="confirmSelection()" color="primary">
-    Okays!
-  </button>
-  <button mat-button (click)="dialogRef.close()">
-    Cancel
-  </button>
+<div class="example-container">
+  <h1 mat-dialog-title>What is your favorite place?</h1>
+  <div class="form-fields-container">
+    <mat-form-field class="place">
+      <input matInput placeholder="Enter your favorite place" [(ngModel)]="place">
+    </mat-form-field>
+    <mat-form-field class="icon">
+      <mat-label>Select an option</mat-label>
+      <mat-select [(ngModel)]="selectedOption">
+        <mat-option *ngFor="let option of options" [value]="option.value">
+          {{option.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="actions" mat-dialog-actions>
+    <button mat-button (click)="confirmSelection()" color="primary">
+      Okays!
+    </button>
+    <button mat-button (click)="dialogRef.close()">
+      Cancel
+    </button>
+  </div>
 </div>
+
